# AutoNovelClaw

./: CLAUDE.md  LICENSE  README.md  prompts.default.yaml  pyproject.toml  sentinel.sh
autonovelclaw/: __init__.py  cli.py  config.py  evolution.py  health.py  knowledge_base.py  monitor.py  prompts.py  quality.py
autonovelclaw/chapter/: __init__.py  context.py  sensory_auditor.py  validator.py
autonovelclaw/continuity/: __init__.py  timeline.py  tracker.py  verify.py
autonovelclaw/data/: genre_conventions.yaml
autonovelclaw/llm/: __init__.py  anthropic.py  cli_client.py  client.py  openai_compat.py
autonovelclaw/pipeline/: __init__.py  contracts.py  executor.py  runner.py  stages.py
autonovelclaw/publishing/: __init__.py  epub_builder.py  pdf_builder.py  validator.py
autonovelclaw/reviewers/: __init__.py  parser.py  planner.py
autonovelclaw/utils/: __init__.py
configs/: config.novelclaw.example.yaml
docs/: integration-guide.md
tests/: test_agents_and_utils.py  test_config.py  test_knowledge_base.py  test_phase2.py  test_phase3.py
